# niruvi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build-appimage.sh  niruvi.py  pyproject.toml  update.json
.github/workflows/: build.yml  lint.yml  test.yml
asset/: niruvi.desktop
asset/icons/: index.theme
niruvi/: __init__.py  __main__.py  _version.py  app_info_dialog.py  appimage_assets.py  appimage_metadata.py  background_updater.py  broker.py  build_dialog.py  build_page.py  builder_bootstrap.py  constants.py  desktop_utils.py  device_info.py  health_check.py  help_dialog.py  hooks.py  icon_utils.py  installation_registry.py  main.py  manager.py  report_dialog.py  report_page.py  sandbox.py  scanner.py  self_install.py  self_installer_wizard.py  self_update.py  settings.py  sound_manager.py  thumbnailer.py  toggle_switch.py  uninstall_dialog.py  update_sources.py  utils.py  wizard.py  worker.py
niruvi/app/: __init__.py  background_updater.py  self_install.py  self_update.py  update_sources.py
niruvi/core/: __init__.py  broker.py  hooks.py  manifest.py  plugin.py  repair.py  sandbox.py  scanner.py  signing.py  verification.py  worker.py
niruvi/desktop/: __init__.py  appimage_assets.py  appimage_metadata.py  appimageupdate.py  desktop_utils.py  installation_registry.py  thumbnailer.py
niruvi/installer/: __init__.py  apprun.py  bootstrap.py  sanitize.py  scripts.py
niruvi/ui/: __init__.py  app_info_dialog.py  build_dialog.py  build_wizard.py  (+8 more)
scripts/: download_icons.py
tests/: test_manifest.py  test_repair.py  test_signing.py  test_verification.py
(+4 files in other folders)
