[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "niruvi"
version = "3.0.0"
description = "Niruvi — Universal Linux AppImage Manager"
license = {text = "GPL-2.0-only"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
]

[project.optional-dependencies]
updates = ["requests>=2.28"]
all = ["requests>=2.28"]

[project.scripts]
niruvi = "niruvi.main:main"

[tool.setuptools.packages.find]
include = ["niruvi*"]
