[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "niruvi"
version = "3.1.1"
description = "Niruvi — Universal Linux AppImage Manager"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
]

[project.optional-dependencies]
all = ["requests>=2.28"]
dev = ["pytest>=7.0", "pytest-mock>=3.10", "pytest-qt>=4.0"]

[project.scripts]
niruvi = "niruvi.main:main"

[tool.setuptools.packages.find]
include = ["niruvi*"]
